# KISS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
App/: CMakeLists.txt  FreeRTOSConfig.h  KISS_config.h  app_freertos.c  audio_rx.cpp  audio_rx.hpp  audio_tx.cpp  audio_tx.hpp  blink_task.cpp  blink_task.h  blink_task.hpp  main.c  main.cpp  main.h  main_task.cpp  main_task.h
App/driver/: CMakeLists.txt  backlight.cpp  bk4829.c  keypad.cpp  lcd.cpp  spi_flash.cpp
App/driver/inc/driver/: adc.hpp  audio_path.hpp  bk4819-regs.h  bk4819.h  flashlight.hpp  keypad.hpp  lcd.hpp  py25q16.hpp  spi_flash.hpp  st7565.hpp
Core/: CMakeLists.txt
Drivers/: CMakeLists.txt
Middlewares/: CMakeLists.txt
Utilities/: CMakeLists.txt
app/: CMakeLists.txt  FreeRTOSConfig.h  app_freertos.c  main_task.h  py32f071_it.c  py32f071_it.h  system_py32f071.c
app/driver/: CMakeLists.txt  adc.cpp  audio_path.cpp  backlight.cpp  bk4829.c  flashlight.cpp  py25q16.cpp  serial.cpp
app/driver/inc/driver/: backlight.hpp  bk4819.h  serial.hpp
app/usb/: usb_config.h
bl2/: CMakeLists.txt  board.c  board.h  fw.c  fw.h  main.c  main.h  printf_config.h  py25q16.c  py25q16.h  py32f071xb.ld  system_py32f071.c  usb_config.h  usbd_msc.c  usbd_msc_impl.c
bl2/lib/: CMakeLists.txt  bl2.c  bl2.h
cmake/: gcc-arm-none-eabi.cmake
ext/: CMakeLists.txt
ext/CherryUSB/class/msc/: usbd_msc.c  usbd_msc.h
ext/CherryUSB/common/: usb_dc.h
ext/CherryUSB/core/: usbd_core.c
ext/CherryUSB/port/: usb_dc_py32.c
fat/: CMakeLists.txt
fat/inc/fat/: fat.h
